finished quiz functionality

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,3 +57,11 @@ main p {
     display: none;
     color: red;
   } 
+
+  #leaderBoard {
+    display: none;
+  }
+
+  #submitScore {
+    display: none;
+  }
