--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 /* CSS has been organized to follow correct semantic structure */
 
-/* Element Selectors */
+/* Element Selectors/ */
 
 h1 {
   font-size: 50px;
